0.34001 Mon May 16, 2011
    Fiz another memory cycle using Select field
    Tweak code creating results for Field testing

0.34000 Mon May 16, 2011
    Fixed memory cycles; 1 in HFH code, others by requiring Moose 2.0007
    Localize value of a button
    Allow limited use of has_many multiple select
    Add SimpleInline & TableInline widgets to not wrap compound fields

0.33002 Tues Feb 22, 2011
    Accidentally left off compatibility for 'required_message' attribute
        messages => { required => '...' } is new style and worked

0.33001 Mon Feb 21, 2011
    Remove unnecessary with of HFH::Validate::Actions

0.33000 Mon Feb 21, 2011
    bug - empty_select check defined
    Add button field, widget, template
    Check html attributes for definedness not truth
    Add ability to set field inactive on new & process
       in addition to setting active
    Move 'no_render_label' into Field
    Use form's language_handle in fields
    Improve PrimaryKey doc
    Return empty hashref from $form->value instead of undef
    Merge experimental Wizard into master
    Render disabled select options
    Repeatable contains rendering incorrectly, skipping empty elements
    Add rendering of form_errors to widgets and Render::Simple
       *** If you were using form_errors (there are none by default)
       and were using HFH rendering, check for compatibility
    Allow specifying full class for widget with '+'
    Document removing wrapper div from Simple wrapper
    Re-do how field messages are stored and accessed. Use messages => {...}
        instead of various _message attributes
    Add utilities in util to pull out class messages and check I18N
    Update I18N messages files (those that were provided by translators)
    Change render_filter Coderef setting because of leak;
       *** Possible incompatibility: if you have a form render_filter,
       change to function instead of method
    Change _localize to a Coderef to allow easier changing.