@@ -1,3 +1,5 @@
+    Add support for tabindex attribute.
+
 0.34001 Mon May 16, 2011
     Fiz another memory cycle using Select field
     Tweak code creating results for Field testing
